--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 
 	
 		<p>First things first. I <strong><em>HIGHLY</em></strong> recommend that you purchase this book: <a href="https://www.amazon.com/Learning-JavaScript-Essentials-Application-Development/dp/1491914912/ref=sr_1_1?s=books&amp;ie=UTF8&amp;qid=1489582493&amp;sr=1-1&amp;keywords=learning+javascript" target="_blank" rel="external">Learning JavaScript</a> &amp; its companion site with errata <a href="http://shop.oreilly.com/product/0636920035534.do" target="_blank" rel="external">HERE</a> (Clears up a lot of the negative review complaints). Additionally, I will recommend the <a href="https://github.com/getify/You-Dont-Know-JS" target="_blank" rel="external">“You don’t know JS”</a> free online books as great resources to help you learn JavaScript. I will link to specific chapters for various topics below.</p>
-<p>I teach an Introduction to Programming Logic class for a community college as well as for a semester at our high school. I use JavaScript only insofar as to allow the students to test their algorithms and understand the coding process. I don’t teach any language features other than what are strictly needed to perform the coding projects, for example the library <code>readline-sync</code> so they can read input from the command line. This is the order I use for my students, over a 16-week period:</p>
+<p>I teach an Introduction to Programming Logic class for a community college as well as for a semester at our high school. I use JavaScript for <em>this</em> class only insofar as to allow the students to test their algorithms and understand the coding process. I don’t teach any language features other than what are strictly needed to perform the coding projects, for example the library <code>readline-sync</code> so they can read input from the command line. This is the order I use for my students, over a 16-week period:</p>
 <ul>
 <li>Code layout - Simply how to format each program file they will turn in for grading. I teach four sections: 1. Comment header, pragmas, &amp; library imports; 2. Global variable declarations &amp; constant declarations/initializations; 3. dispatching section using a main function; 4. All methods - Mutators &amp; workers. Every project my students turn in follow that code layout pattern.</li>
 <li>Syntax and style - How we will format the code and what the language reserved words are.</li>
 <li>Comments - Single-line, multi-line, and JSDoc.</li>
 <li>Variables, constants, &amp; scope - Data type, declaring, &amp; initializing.</li>
-<li>Operators - &lt;, &gt;, ===, !==, &lt;=, &gt;=, arithmetic: +, -, <em>, /, %, *</em></li>
+<li>Operators - &lt;, &gt;, ===, !==, &lt;=, &gt;=, arithmetic: <strong> + - * / % ** </strong></li>
 <li>Synchronous functions - How to modularize their code into smaller, cohesive chunks. This includes how to use dispatching with a main function.</li>
 <li>Parameters - How to pass &amp; receive values into functions.</li>
 <li>Selection logic - If, else if, else.</li>
@@ -65,8 +65,8 @@
 <li>Basic collections - Single &amp; multi-dimensional arrays, maps, &amp; sorting.</li>
 <li>File I/O - How to read &amp; write data to permanent storage.</li>
 </ul>
-<p>I have them download &amp; use Node.js to do all their projects so that we aren’t dealing with web browsers. It’s trivial for my students to use IntelliJ to write their code, then run it directly from the toolbar to see their output! Good stuff.</p>
-<p>Here are the list of learning resources I use (You don’t have to do every one, but it wouldn’t hurt to at least skim wht you do in depth with):</p>
+<p>I have them download &amp; use Node.js to do all their projects so that we aren’t dealing with web browsers. It’s trivial for my students to use IntelliJ to write their code, then run it directly from the toolbar to see their output! Good stuff. For my web dev classes, we go WAYYY more in depth with actual JavaScript on bot the front &amp; back ends and I will cover that in the next posts.</p>
+<p>Here are the list of learning resources I use (You don’t have to do every one, but it wouldn’t hurt to at least skim what you don’t go in depth with):</p>
 <ol>
 <li>Code layout &amp; syntax/style - I provide this <a href="https://youtu.be/K-RwRTeB8Qs" target="_blank" rel="external">VIDEO</a> for my students.</li>
 <li><a href="https://openclassrooms.com/courses/learn-the-basics-of-javascript" target="_blank" rel="external">JavaScript Course</a></li>
@@ -74,8 +74,8 @@
 <li><a href="https://www.udacity.com/course/javascript-basics--ud804" target="_blank" rel="external">A nice JS Basics course</a></li>
 <li><a href="https://watchandcode.com/" target="_blank" rel="external">An alternative take on learning JS</a></li>
 <li>Finally, Microsoft’s <a href="https://mva.microsoft.com/en-us/training-courses/javascript-fundamentals-for-absolute-beginners-14194?l=DmF3TY1eB_9500115888" target="_blank" rel="external">take on it</a>, which is actually very good! (I personally loathe jQuery, so I can’t recommend those parts at the end.)</li>
-<li>Regular expressions - For your library, I would recommend these two books: <a href="https://www.amazon.com/Mastering-Regular-Expressions-Jeffrey-Friedl/dp/0596528124" target="_blank" rel="external"><em>Mastering Regular Expressions</em></a> + <a href="http://shop.oreilly.com/product/9780596528126.do" target="_blank" rel="external">Errata</a> &amp; <a href="https://www.amazon.com/Regular-Expressions-Cookbook-Solutions-Programming/dp/1449319432" target="_blank" rel="external"><em>Regular Expressions Cookbook</em></a> + <a href="http://shop.oreilly.com/product/0636920023630.do" target="_blank" rel="external">Errata</a>. <a href="">THIS</a> is a great tutorial, <a href="https://regex101.com/" target="_blank" rel="external">THIS</a> is a great regex tester, &amp; <a href="https://www.cheatography.com/davechild/cheat-sheets/regular-expressions/" target="_blank" rel="external">THIS</a> is a great cheat sheet.</li>
-<li>File I/O [demo code]. Also notice the input validation.</li>
+<li>Regular expressions - For your library, I would recommend these two books: <a href="https://www.amazon.com/Mastering-Regular-Expressions-Jeffrey-Friedl/dp/0596528124" target="_blank" rel="external"><em>Mastering Regular Expressions</em></a> + <a href="http://shop.oreilly.com/product/9780596528126.do" target="_blank" rel="external">Errata</a> &amp; <a href="https://www.amazon.com/Regular-Expressions-Cookbook-Solutions-Programming/dp/1449319432" target="_blank" rel="external"><em>Regular Expressions Cookbook</em></a> + <a href="http://shop.oreilly.com/product/0636920023630.do" target="_blank" rel="external">Errata</a>. <a href="https://code.tutsplus.com/tutorials/you-dont-know-anything-about-regular-expressions-a-complete-guide--net-7869" target="_blank" rel="external">THIS</a> is a great tutorial, <a href="https://regex101.com/" target="_blank" rel="external">THIS</a> is a great regex tester, &amp; <a href="https://www.cheatography.com/davechild/cheat-sheets/regular-expressions/" target="_blank" rel="external">THIS</a> is a great cheat sheet.</li>
+<li>File I/O <a href="/stuff/fileIO.txt">demo code</a>. Also notice the input validation.</li>
 <li>Remember to utilize the <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" rel="external">MDN</a>.</li>
 <li>If you get bored, try <a href="https://www.codecademy.com/courses/learn-javascript" target="_blank" rel="external">Codecademy!</a></li>
 </ol>
