Updated new post

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <li>Express, Koa, etc.</li>
 </ul>
 <p>I believe the hardest part of this will be community concensus on what constitutes best-practice, whether its style, methods, or what’s necessary and what should be abstracted away. Perhaps a voting system on various ideas will allow us to solve that?</p>
-<p>So, why only certify teachers and not the students? Well, there’s <a href="http://www.futurity.org/learning-students-teaching-741342/" target="_blank" rel="external">evidence-based research</a> that to learn something better, you should teach it to others. If the students want to demonstrate their competency, what better way that to show us that they can teach it?</p>
+<p>So, why only certify teachers and not the students? Well, there’s <a href="http://www.futurity.org/learning-students-teaching-741342/" target="_blank" rel="external">evidence-based research</a> showing that to learn something better, you should teach it to others. If the students want to demonstrate their competency, what better way that to show us that they can teach it?</p>
 <p><figure class="figure"><img src="/stuff/cartoon1.jpg" alt=""></figure></p>
 
 	
